refactor: DIP에 따른 리팩토링